docs/api/qiskit/0.33/qiskit.circuit.library.RVGate.md
---
title: RVGate
description: API reference for qiskit.circuit.library.RVGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RVGate
---

# RVGate

<span id="qiskit.circuit.library.RVGate" />

`RVGate(v_x, v_y, v_z, basis='U')`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/generalized_gates/rv.py "view source code")

Bases: `qiskit.circuit.gate.Gate`

Rotation around arbitrary rotation axis $v$ where $\vert v\vert $ is angle of rotation in radians.

**Circuit symbol:**

```python
     ┌─────────────────┐
q_0: ┤ RV(v_x,v_y,v_z) ├
     └─────────────────┘
```

**Matrix Representation:**

$$
\begin{split}\newcommand{\th}{\vert \vec{v}\vert }
\newcommand{\sinc}{\text{sinc}}
    R(\vec{v}) = e^{-i \vec{v}\cdot\vec{\sigma}} =
        \begin{pmatrix}
            \cos{\th} -i v_z \sinc(\th) & -(i v_x + v_y) \sinc(\th) \\
            -(i v_x - v_y) \sinc(\th) & \cos(\th) + i v_z \sinc(\th)
        \end{pmatrix}\end{split}
$$

Create new rv single-qubit gate.

**Parameters**

*   **v\_x** (*float*) – x-component
*   **v\_y** (*float*) – y-component
*   **v\_z** (*float*) – z-component
*   **basis** (*str, optional*) – basis (see `OneQubitEulerDecomposer`)

## Methods Defined Here

### inverse

<span id="qiskit.circuit.library.RVGate.inverse" />

`RVGate.inverse()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/generalized_gates/rv.py "view source code")

Invert this gate.

### to\_matrix

<span id="qiskit.circuit.library.RVGate.to_matrix" />

`RVGate.to_matrix()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/generalized_gates/rv.py "view source code")

Return a numpy.array for the R(v) gate.

## Attributes

<span id="qiskit.circuit.library.RVGate.condition_bits" />

### condition\_bits

Get Clbits in condition.

**Return type**

`List`\[`Clbit`]

<span id="qiskit.circuit.library.RVGate.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.library.RVGate.definition" />

### definition

Return definition in terms of other basic gates.

<span id="qiskit.circuit.library.RVGate.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.library.RVGate.label" />

### label

Return instruction label

**Return type**

`str`

<span id="qiskit.circuit.library.RVGate.params" />

### params

return instruction params.

<span id="qiskit.circuit.library.RVGate.unit" />

### unit

Get the time unit of duration.

